# edu-advent-2023-part2

./: .gitignore  Hello.hs  advent.cabal  day12.hs  day14.hs  day18.hs  day19.hs
